--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>THOLE Meme Coin</title>
-    <link rel="stylesheet" href="bebestyle.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="black-hole-in-space (1).png">
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand:wght@400;700&display=swap" rel="stylesheet">
