--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
             <div class="chart-container">
                 <img src="roadmap--dark-background.png" alt="Token Distribution" class="image-placeholder">
                 <ul class="chart-labels">
-                    <li>Fairlaunch on GasPump</li>
-                    <li>DeDust</li>
-                    <li>100k Mcap</li>
-                    <li>Contributions and TG Miniapp</li>
+                    <li>1. Fairlaunch on GasPump</li>
+                    <li>2. DeDust</li>
+                    <li>3. 100k Mcap</li>
+                    <li>4. Contributions and TG Miniapp</li>
                 </ul>
             </div>
         </section>
